--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
         </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FMR9Y8KSYM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FMR9Y8KSYM');
+</script>
+
+    <meta charset="utf-8">
+    <meta name="google-site-verification" content="bZWmdKP3Zh6iLbhiQ6GT2GgtdwidEVtETDUgWVTdjVI" />
         <meta charset="utf-8">
         <title>KE Media- Latest Hot News Everytime</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
