--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,6 @@
                         <div class="social">
                             <a href=""><i class="fab fa-facebook"></i></a>
                             <a href=""><i class="fab fa-linkedin"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                 </div>
@@ -80,15 +78,18 @@
 
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav m-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="#" class="nav-item nav-link">Sports</a>
-                            <a href="#" class="nav-item nav-link">Tech</a>
-                            <a href="#" class="nav-item nav-link">Fashion</a>
+                            <<a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="sport.html" class="nav-item nav-link">Sports</a>
+                            <a href="politics.html" class="nav-item nav-link">Politics</a>
+                            <a href="technology.html" class="nav-item nav-link">Technology</a>
+                            <a href="education.html" class="nav-item nav-link">Education</a>
+                            <a href="entertainment.html" class="nav-item nav-link">Entertainment</a>
+                            <a href="fashion.html" class="nav-item nav-link">Fashion</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
                                 <div class="dropdown-menu">
-                                    <a href="#" class="dropdown-item">Latest News</a>
-                                    <a href="#" class="dropdown-item">Blog</a>
+                                    <a href="latest%20News.html" class="dropdown-item">Latest News</a>
+                                    <a href="Blog.html" class="dropdown-item">Blog</a>
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact Us</a>
