--- a/contact.html
+++ b/contact.html
@@ -166,6 +166,7 @@
         
         
         <!-- Footer Start -->
+        <!-- Footer Start -->
         <div class="footer">
         <div class="footer">
             <div class="container-fluid">
@@ -174,11 +175,11 @@
                         <div class="footer-widget">
                             <h3 class="title">Useful Links</h3>
                             <ul>
-                                <li><a href="#">Contact Us</a></li>
-                                <li><a href="#">Popular News</a></li>
-                                <li><a href="#">Latest Blogs</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">FAQs </a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="latest%20News.html">Popular News</a></li>
+                                <li><a href="Blog.html">Latest Blogs</a></li>
+                                <li><a href="privacy%20policy.html">Privacy Policy</a></li>
+                                <li><a href="FAQS.html">FAQs </a></li>
                             </ul>
                         </div>
                     </div>
@@ -193,8 +194,6 @@
                                 <div class="social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.facebook.com/kemedia1"><i class="fab fa-facebook"></i></a>
-                                    <a href=""><i class="fab fa-linkedin"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
                                     <a href=""><i class="fab fa-youtube"></i></a>
                                 </div>
                             </div>
