--- a/politics.html
+++ b/politics.html
@@ -108,7 +108,7 @@
                                     <img src="img/southsudan.jpg" />
                                     
                                             <a class="tn-date" href="politics.html"><i class="far fa-clock"></i>01-03-2025</a>
-                                    <a class="cn-title" href="politics.html">South Sudan faced Violence plague</a>
+                                    <a class="cn-title" href="southsudan-violence.html">South Sudan faces Violence plague</a>
                                         </div>   
                                             
                                         </div>
