--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
-     crossorigin="anonymous"></script>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FMR9Y8KSYM"></script>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D38YEW5CR8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-FMR9Y8KSYM');
+  gtag('config', 'G-D38YEW5CR8');
 </script>
+        </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FMR9Y8KSYM"></script>
 
     <meta charset="utf-8">
     <meta name="google-site-verification" content="bZWmdKP3Zh6iLbhiQ6GT2GgtdwidEVtETDUgWVTdjVI" />
