--- a/latest News.html
+++ b/latest News.html
@@ -1,6 +1,7 @@
 <<!DOCTYPE html>
 <html lang="en">
     <head>
+        <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/f32dad374bf2e762eb8a3f1743701d25.js"></script>
         <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D38YEW5CR8"></script>
 <script>
