--- a/privacy policy.html
+++ b/privacy policy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/f32dad374bf2e762eb8a3f1743701d25.js"></script>
         <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D38YEW5CR8"></script>
 <script>
@@ -111,7 +112,6 @@
         
     
                                     <h4>Privacy Policy</h4>
-                                    <h5>Privacy policy</h5>
                             <p>If  you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern KE Media, in relationship with you and this website. If you disagree with any part of these terms and conditions, please do not use our website.
 The term “KE Media” or “us” or “we” refers to the owner of the website whose registered office is located at Marigat, Kenya. The term “you” refers to the user or viewer of our website.</p>
 <h5>The use of this website is subject to the following terms of use</h5>
