--- a/international.html
+++ b/international.html
@@ -12,7 +12,7 @@
   gtag('config', 'G-D38YEW5CR8');
 </script>
         <meta charset="utf-8">
-        <title>KE Media- Contact Us</title>
+        <title>KE Media- International News</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Best Media Company" name="keywords">
         <meta content="Latest News" name="description">
@@ -115,7 +115,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/putin.jpg" />
+                            <img src="img/images(13).jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>20-Mar-2025</a>
                                 <p>Ukrainians have reacted sceptically to a phone call between Russian President Vladimir Putin and US counterpart Donald Trump, who had sought to convince Moscow to agree to a temporary ceasefire.</p>
