--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta charset="utf-8">
     <meta name="google-site-verification" content="bZWmdKP3Zh6iLbhiQ6GT2GgtdwidEVtETDUgWVTdjVI" />
         <meta charset="utf-8">
-        <title>KE Media- Latest Hot News Everytime</title>
+        <title>KE Media- Latest News Everytime</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Factual News Everyday" name="kenya politics, education">
         
@@ -140,7 +140,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/putin.jpg" />
+                                    <img src="img/images(13).jpg" />
                                     
                                             <a class="tn-date" href="politics.html"><i class="far fa-clock"></i>20-Mar-2025</a>
                                     <a class="cn-title" href="international.html">Ukranians doubt Trump words, Putin promises</a>
