--- a/international.html
+++ b/international.html
@@ -102,8 +102,8 @@
         <div class="breadcrumb-wrap">
             <div class="container-fluid">
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Contact</li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                
                 </ul>
             </div>
         </div>
