--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/images (13).jpg" />
+                                    <img src="img/images (13).jpeg" />
                                     
                                             <a class="tn-date" href="politics.html"><i class="far fa-clock"></i>20-Mar-2025</a>
                                     <a class="cn-title" href="international.html">Ukranians doubt Trump words, Putin promises</a>
