--- a/wetangula-impeachment.html
+++ b/wetangula-impeachment.html
@@ -11,6 +11,8 @@
 
   gtag('config', 'G-D38YEW5CR8');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <title>KE Media- Contact Us</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
