--- a/3 AI tools to make money online in 2025.html
+++ b/3 AI tools to make money online in 2025.html
@@ -11,10 +11,12 @@
 
   gtag('config', 'G-D38YEW5CR8');
 </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <title>3 AI Tools to make money online in 2025</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Best Media Company" name="keywords">
+        <meta content="3 AI Tools to make money online in 2025" name="keywords">
         <meta content="Latest News" name="description">
 
         <!-- Favicon -->
