--- a/3 AI tools to make money online in 2025.html
+++ b/3 AI tools to make money online in 2025.html
@@ -117,7 +117,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/images (14).jpeg" />
+                            <img src="img/ai.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>21-Mar-2025</a>
                           <h1>3 AI Tools to make money online in 2025</h1>
