--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                                     <img src="img/wetangula.jpg" />
                                     
                                             <a class="tn-date" href="politics.html"><i class="far fa-clock"></i>15-Feb-2025</a>
-                                    <a class="cn-title" href="politics.html">ODM Senator Calls for Wetangula’s Impeachment After Ruling on Majority in Parliament
-                                            their displeasure with Wetangula's ruling</a>
+                                    <a class="cn-title" href="politics.html">ODM Senator Calls for Wetangula’s Impeachment</a>
                                         </div>   
                                             
                                         </div>
