--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/images (15).jpeg" />
+                                    <img src="img/wetangula.jpg" />
                                     
                                             <a class="tn-date" href="politics.html"><i class="far fa-clock"></i>15-Feb-2025</a>
                                     <a class="cn-title" href="politics.html">ODM Senator Calls for Wetangula’s Impeachment</a>
