--- a/international.html
+++ b/international.html
@@ -3,6 +3,7 @@
     <head>
         <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/f32dad374bf2e762eb8a3f1743701d25.js"></script>
        <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-NP69XEFGMD"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-NP69XEFGMD'); </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
         <meta charset="utf-8">
         <title>KE Media- International News</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
