--- a/sports.html
+++ b/sports.html
@@ -6,7 +6,7 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
         <meta charset="utf-8">
-        <title>KE Media- Contact Us</title>
+        <title>KE MEDIA- Football and Sport</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Best Media Company" name="keywords">
         <meta content="Latest News" name="description">
@@ -70,7 +70,7 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav m-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="sport.html" class="nav-item nav-link">Sports</a>
+                            <a href="sports.html" class="nav-item nav-link">Sports</a>
                             <a href="politics.html" class="nav-item nav-link">Politics</a>
                             <a href="technology.html" class="nav-item nav-link">Technology</a>
                             <a href="education.html" class="nav-item nav-link">Education</a>
