--- a/trade-business.html
+++ b/trade-business.html
@@ -107,10 +107,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/.jpg" />
+                                    <img src="img/corporate.jpg" />
                                     
                                             <a class="tn-date" href=""><i class="far fa-clock"></i>23-03-2025</a>
-                                    <a class="cn-title" href=""></a>
+                                    <a class="cn-title" href="conflict-management-in-corporate-businesses.html">Conflict management in corporate businesse</a>
                                         </div>   
                                             
                                         </div>
