--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                         <div class="row cn-slider">
                             <div class="col-md-6">
                                 <div class="cn-img">
-                                    <img src="img/eurobond.jpg" />
+                                    <img src="img/corporate.jpg" />
 
-                                            <a class="cn-date" href=""><i class="far fa-clock"></i>25-Feb-2025</a>
-                                            <a class="cn-title" href="eurobond.html">Kenya to buy back Sh117bn Eurobond ahead of maturity</a>
+                                            <a class="cn-date" href="conflict-magaement-in-corprate-businesses.html"><i class="far fa-clock"></i>23-Mar-2025</a>
+                                            <a class="cn-title" href="conflict-magaement-in-corprate-businesses.htm">Conflict Management in Corporate Business</a>
                                         </div>
                                     </div>
                                 </div>
