--- a/technology.html
+++ b/technology.html
@@ -107,9 +107,9 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/ai.jpg" />
+                                    <img src="img/aimoney.jpg" />
                                     
-                                            <a class="tn-date" href="politics.html"><i class="far fa-clock"></i>21-03-2025</a>
+                                            <a class="tn-date" href=""><i class="far fa-clock"></i>21-03-2025</a>
                                     <a class="cn-title" href="3 AI tools to make money online in 2025.html">3 AI tools to make money online in 2025</a>
                                         </div>   
                                             
