--- a/index.html
+++ b/index.html
@@ -381,7 +381,9 @@
                             <div class="newsletter">
                                 <p>Sign up to our newsletter to receive latest updates .
                                 </p>
-                                <form>
+                                <form action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="9b9e0743-fe23-4d0c-bd5b-fdecf5089087">
+                                
                                     <input class="form-control" type="email" placeholder="Your email here">
                                     <button class="btn">Submit</button>
                                 </form>
