--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                     <img src="img/corporate.jpg" />
 
                                             <a class="cn-date" href="conflict-magaement-in-corprate-businesses.html"><i class="far fa-clock"></i>23-Mar-2025</a>
-                                            <a class="cn-title" href="conflict-magaement-in-corprate-businesses.htm">Conflict Management in Corporate Business</a>
+                                            <a class="cn-title" href="conflict-magaement-in-corprate-businesses.html">Conflict Management in Corporate Business</a>
                                         </div>
                                     </div>
                                 </div>
