--- a/conflict-management-in-corporate-businesses.html
+++ b/conflict-management-in-corporate-businesses.html
@@ -110,7 +110,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/ai.jpg" />
+                            <img src="img/corporate.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>23-Mar-2025</a>
                           <h1>Conflict Management in Corporate Businesses: Causes and Resolution Strategies</h1>
