--- a/conflict-management-in-corporate-businesses.html
+++ b/conflict-management-in-corporate-businesses.html
@@ -114,7 +114,7 @@
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>23-Mar-2025</a>
                           <h1>Conflict Management in Corporate Businesses: Causes and Resolution Strategies</h1>
-<h2>Executive Summary: </h2>
+
 <p>Workplace conflict is an inherent aspect of corporate businesses, capable of significantly impacting productivity, employee morale, and overall financial performance. This report provides a comprehensive analysis of conflict management within corporate settings, identifying common causes such as differing goals, resource scarcity, communication breakdowns, personality clashes, and organizational structure issues. </p>
 <p>For each identified cause, effective solution methods and strategies applicable in a corporate environment are explored, drawing upon current research. The report further analyzes conflict at individual, team, and interdepartmental levels, investigating specific causes and resolution approaches for each. The crucial role of organizational culture in either fostering or mitigating conflict is examined, alongside a detailed investigation into the detrimental impacts of unresolved conflict. Various conflict management styles, including avoidance, accommodation, competition, compromise, and collaboration, are discussed in terms of their suitability for different corporate conflict scenarios. Finally, the report assesses the role and effectiveness of formal conflict resolution processes like mediation and arbitration within corporate businesses, concluding with recommendations for building a conflict-resilient organization.</p>
 <h2>Introduction:</h2>
@@ -137,7 +137,21 @@
 <p>A poor work environment, characterized by discomfort, safety issues, or a lack of support, can increase employee stress and irritability, thereby raising the likelihood of conflict. A lack of equal opportunities for advancement and development can lead to feelings of disenfranchisement and conflict. Bullying and harassment create a hostile work environment and are significant sources of conflict. Significant organizational changes can create uncertainty and anxiety, leading to conflict if not managed effectively. </p>
 <p>Unrealistic needs and expectations from employers can also cause conflict. Discrepancies between an organization's actions and what employees perceive as fair, related to business values, can be a source of conflict. Unresolved workplace issues and an increase in workload are further common triggers for conflict. Finally, a lack of role clarification, poor processes, lack of performance standards, unreasonable time constraints, and resistance to change all contribute to the complex landscape of workplace conflict.</p>
 <p>In our next blog, we will deep dive into effective solution methods and strategies of navigating disagreements. </p>
+Subscribe Below to Receive more of our educational content
+                            <div class="col-lg-3 col-md-6">
+                        <div class="footer-widget">
+                            <h3 class="title">Newsletter</h3>
+                            <div class="newsletter">
+                                <p>Sign Up to Receive more content.
+                                </p>
+                                <form action="https://api.web3forms.com/submit" method="POST">
 
+    <input type="hidden" name="access_key" value="9b9e0743-fe23-4d0c-bd5b-fdecf5089087">
+                                    <input class="form-control" type="email" placeholder="Your email here">
+                                    <button class="btn">Submit</button>
+                                </form>
+                            </div>
+                        </div>
 
                                 </div>
                             </div>
