--- a/index.html
+++ b/index.html
@@ -383,8 +383,9 @@
                                 </p>
                                 <form action="https://api.web3forms.com/submit" method="POST">
                     <input type="hidden" name="access_key" value="9b9e0743-fe23-4d0c-bd5b-fdecf5089087">
-                                
+                                    <input type="text" name="name" required>
                                     <input class="form-control" type="email" placeholder="Your email here">
+                                    <textarea name="message" required></textarea>
                                     <button class="btn">Submit</button>
                                 </form>
                             </div>
