--- a/university-funding-model-unconstitutional.html
+++ b/university-funding-model-unconstitutional.html
@@ -109,7 +109,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/csogwambo.jpg" />
+                            <img src="img/csogamba.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>23-Mar-2025</a>
                           <h1>University Funding Model Declared Unconstitutiona</h1>
