--- a/education.html
+++ b/education.html
@@ -107,10 +107,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/.jpg" />
+                                    <img src="img/csogamba.jpg" />
                                     
-                                            <a class="tn-date" href=""><i class="far fa-clock"></i>23-03-2025</a>
-                                    <a class="cn-title" href=""></a>
+                                            <a class="tn-date" href="university-funding-model-unconstitutional.html"><i class="far fa-clock"></i>23-03-2025</a>
+                                    <a class="cn-title" href="university-funding-model-unconstitutional.html">New University Funding model declared Unconstitutional by the High Court</a>
                                         </div>   
                                             
                                         </div>
