--- a/university-funding-model-unconstitutional.html
+++ b/university-funding-model-unconstitutional.html
@@ -112,7 +112,7 @@
                             <img src="img/csogamba.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>23-Mar-2025</a>
-                          <h1>University Funding Model Declared Unconstitutiona</h1>
+                          <h1>University Funding Model Declared Unconstitutional</h1>
                                <h1>The Ministry of Education has issued an update on the implementation of the new university funding model following a high court ruling that declared it unconstitutional. </h1>
 <p>The Principal Secretary for the State Department for Higher Education and Research Beatrice Inyangala clarified that the government has not reverted to the old funding model.<p>
 <p>PS Inyangala appeared before the Senate Standing Committee on Education on Thursday, March 20, where she said that the disbursement of funds under the new funding model is based on funds that had been appropriated in 2024 before the High Court judgment was issued.</p>
