--- a/navigating-disagreements-in-corporate-business.html
+++ b/navigating-disagreements-in-corporate-business.html
@@ -6,7 +6,7 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
         <meta charset="utf-8">
-        <title>Conflict Management in Corporate Business</title>
+        <title>Navigating Conflict- Solutions and Strategies</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="Latest News" name="description">
@@ -110,7 +110,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/corporate.jpg" />
+                            <img src="img/navigating.png" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>24-Mar-2025</a>
                           <h1>Navigating Disagreements: Effective Solution Methods and Strategies:</h1>
