--- a/index.html
+++ b/index.html
@@ -238,7 +238,15 @@
                                     <img src="img/corporate.jpg" />
 
                                             <a class="cn-date" href="conflict-management-in-corporate-businesses.html"><i class="far fa-clock"></i>23-Mar-2025</a>
-                                            <a class="cn-title" href="conflict-management-in-corporate-businesses.html">Conflict Management in Corporate Business</a>
+                                            <a class="cn-title" href="conflict-management-in-corporate-businesses.html">Navigating Disagreements: Effective Solution Methods and Strategies</a>
+                                        </div>
+                                    </div>
+                            <div class="col-md-6">
+                                <div class="cn-img">
+                                    <img src="img/navigating.png" />
+
+                                            <a class="cn-date" href="navigating-disagreements-in-corporate-business.html"><i class="far fa-clock"></i>24-Mar-2025</a>
+                                            <a class="cn-title" href="navigating-disagreements-in-corporate-business.html">Conflict Management in Corporate Business</a>
                                         </div>
                                     </div>
                                 </div>
