--- a/navigating-disagreements-in-corporate-business.html
+++ b/navigating-disagreements-in-corporate-business.html
@@ -9,7 +9,7 @@
         <title>Navigating Conflict- Solutions and Strategies</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
-        <meta content="Latest News" name="description">
+        <meta content="Business Blog" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
