--- a/education.html
+++ b/education.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8">
         <title>KE Media- Education</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Best Media Company" name="keywords">
-        <meta content="Latest News" name="description">
+        <meta content="" name="keywords">
+        <meta content="Education News" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
