--- a/sport.html
+++ b/sport.html
@@ -8,8 +8,8 @@
         <meta charset="utf-8">
         <title>KE MEDIA- Football and Sport</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Best Media Company" name="keywords">
-        <meta content="Latest News" name="description">
+        <meta content="Sport News" name="keywords">
+        <meta content="" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
