--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
                             </div>
                         </div>
                     </div>
+            <div class="cat-news">
+            <div class="container-fluid">
+                <div class="row">
                     <div class="col-md-6">
                         <h2><i class="fas fa-align-justify"></i>Technology</h2>
                         <div class="row cn-slider">
@@ -261,6 +264,9 @@
                             
                         </div>
                     </div>
+             <div class="cat-news">
+            <div class="container-fluid">
+                <div class="row">
                     <div class="col-md-6">
                         <h2><i class="fas fa-align-justify"></i>Entertainment</h2>
                         <div class="row cn-slider">
