--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <img src="img/supermetro.jpeg" />
                                     
                                             <a class="tn-date" href="super-metro-ban-halted.html"><i class="far fa-clock"></i>24-Mar-2025</a>
-                                    <a class="cn-title" href="super-metro-ban-halted.html"> 3 AI Tools To Make Money Online in 2025</a>
+                                    <a class="cn-title" href="super-metro-ban-halted.html"> Super Metro Ban halted</a>
                                         </div>   
                                             
                                         </div>
