--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     </div>
                                 <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="img/supermetro.jpeg" />
+                                    <img src="img/supermetro.jpg" />
                                     
                                             <a class="tn-date" href="super-metro-ban-halted.html"><i class="far fa-clock"></i>24-Mar-2025</a>
                                     <a class="cn-title" href="super-metro-ban-halted.html"> Super Metro Ban halted</a>
