--- a/super-metro-ban-halted.html
+++ b/super-metro-ban-halted.html
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/supermetro.jpeg" />
+                            <img src="img/supermetro.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>24-Mar-2025</a>
                           <h1>Super Metro Ban halted</h1>
