--- a/super-metro-ban-halted.html
+++ b/super-metro-ban-halted.html
@@ -117,10 +117,32 @@
                           <h1>Super Metro Ban halted</h1>
 <p>Super Metro Limited can breathe a sigh of relief after the Transport Licensing Appeals Board has temporarily stopped the operational ban imposed by the National Transport and Safety Authority (NTSA).</p>
 <p>"Pending inter-party hearing of the motion and the memorandum of appeal....an interim order is hereby issued staying the operation of the decision of the respondents dated 18th March suspending the operations of the applicant," reads the order in part.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="1255862027"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p>NTSA suspended Super Metro Limited's operating license on March 20 for multiple violations of Public Service Vehicle (PSV) regulations.</p>
 <p>NTSA said that the decision aims to ensure road safety and regulatory compliance. </p>
 <p>A thorough examination of the company's operations revealed numerous instances of noncompliance, according to the authority, including vehicle inspection and licensing failures, speed limiter violations, unqualified drivers, and labor law violations. </p>
 <p>Among the key areas of scrutiny were the vehicles' bodywork, speed limiters, lighting systems, safety belts, and tyre conditions.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="1255862027"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p>The Sacco filed an appeal with the Transport Licensing Appeals Board in Nairobi, challenging the Authority’s decision and terming the move arbitrary and unjust.</p>
 <p>Super Metro argued that it had invested heavily in aligning its operations with regulatory requirements and claimed that NTSA’s suspension would cripple its operations and harm thousands of livelihoods.</p>
 <p>In its appeal, the Sacco asserted that the suspension is based on conjecture and insufficiently investigated facts.</p>
