Update 3 AI tools to make money online in 2025.html

--- a/3 AI tools to make money online in 2025.html
+++ b/3 AI tools to make money online in 2025.html
@@ -118,12 +118,32 @@
 
 <p>Everyday professionals are finding innovative ways and use cases for maximizing the power of artificial intelligence, especially generative AI, to advance their careers and modify their income. So, why aren't you?</p>
 <p>You’ve probably seen articles on the internet that cite well-known AI apps like ChatGPT and Midjourney as tools to help you make money. But what about the other AI-powered tools that are not so obvious but still leverage the power of automation to drive results?</p>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h3>3 AI-Powered Tools To Boost Your Income In 2025</h3>
 <p>Below are three AI-powered tools you absolutely need in your career toolkit, whether you’re a freelancer, side hustle pro, start-up entrepreneur, student, or full-time employed professional.</p>
 
 <p>You may not be a tech expert or have coding skills, but you can still build a lucrative income with AI. If you’re not leveraging artificial intelligence to supplement your salary or grow your full-time business online, you're leaving money on the table.</p>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p>Everyday professionals are finding innovative ways and use cases for maximizing the power of artificial intelligence, especially generative AI, to advance their careers and modify their income. So, why aren't you? </p>
 
 
@@ -147,7 +167,17 @@ Offer email marketing and sales funnels for businesses, based on tried and teste
 
 <p>Lisa Taranchenko, a full-time freelance illustrator on Fiverr, explains, “It has a knowledge base where it learns from my past conversations and my gig descriptions, and you can even edit it yourself as well if something doesn’t seem right. So that’s been amazing because I can even talk to clients while I sleep at night or while I'm sick.
 For example, my daughter was sick last week and I didn’t have to worry about being on my phone constantly and I could pay more attention to her,” Taranchenko said.
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <p>Don’t you think it’s time for you to unlock the potential of artificial intelligence in your own work so that you can leverage your skills to make more money? Familiarize yourself with these AI tools and don’t be afraid to experiment with them. Follow their helpful guides and tutorials so you can really maximize these features, boost your income and results, and be more effective in your work.
 <h2>Making Money With AI FAQs</h2>
 <h4>Can I really make money with AI?</h4>
@@ -155,6 +185,17 @@ For example, my daughter was sick last week and I didn’t have to worry about b
 <p>Yes of course you can. AI itself is not a magic tool, however. But combined with your human expertise, you can leverage AI tools to save you time and make money faster than would have been possible otherwise.</p>
 
 <h4>What is the best AI app to make money?</h4>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <p>There’s no single app that has “magic” powers to make more money than others. As mentioned earlier, it’s not the app that makes a huge difference in itself, it’s what you do with it. That being said, ChatGPT, being highly versatile as a generative AI tool, is probably one of the best AI apps to make money because there are so many use cases, from creating business plans, to content strategies, to writing content, to data analysis and more.</p>
   <h6>Source: Forbes<h/6>
