--- a/kapropita-girls-students-demonstrates.html
+++ b/kapropita-girls-students-demonstrates.html
@@ -115,10 +115,32 @@
                             <img src="img/kapropita.jpg" />
                             
                                     <a class="tn-date" href=""><i class="far fa-clock"></i>24-Mar-2025</a>
-                          h1>Kapropita Girls sent home after demonstration</h1>
+                         <h1>Kapropita Girls sent home after demonstration</h1>
 <p>KAPROPITA Girls' High School students have been sent home with immediate effect until further notice following student unrest.</p>
-<p>It is reported that the students destroyed property including breaking the glass windows of classes and dormitories.</p>
-<p>This comes few weeks after the school held a thanksgiving day to celebrate last year performance where CS Miano was the chief guest.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="1255862027"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                            <p>It is reported that the students destroyed property including breaking the glass windows of classes and dormitories.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="1255862027"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                            <p>This comes few weeks after the school held a thanksgiving day to celebrate last year performance where CS Miano was the chief guest.</p>
 <p>Main cause of demonstration is yet to be known.</p>  
 
 
