--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <div class="tn-img">
                                     <img src="img/kapropita.jpg" />
                                     
-                                            <a class="tn-date" href="kapropita-girls-students-demonstrates.html"><i class="far fa-clock"></i>24-Mar-2025</a> Kapropita Girls students sent home after demonstration</a>
+                                            <a class="tn-date" href="kapropita-girls-students-demonstrates.html"><i class="far fa-clock"></i>24-Mar-2025</a>
                                  <a class="cn-title" href="kapropita-girls-students-demonstrates.html"> Kapropita Girls students sent home after demonstration</a>       
                                 </div>   
                                             
